@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dawdler</groupId>
 		<artifactId>dawdler</artifactId>
-		<version>0.17.1-jdk17-RELEASES</version>
+		<version>0.17.2-jdk17-RELEASES</version>
 	</parent>
 	<artifactId>dawdler-core</artifactId>
 	<name>dawdler-core</name>
@@ -53,6 +53,8 @@
 						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
 						<arg>--add-exports</arg>
 						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.perf=dawdler.core</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
